test/MC/AArch64/SVE/uzp1-diagnostics.s
// RUN: not llvm-mc -triple=aarch64 -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s

// Invalid element kind.
uzp1 z14.h, z21.h, z31.x
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: Invalid SVE element size qualifier
// CHECK-NEXT: uzp1 z14.h, z21.h, z31.x
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:

// Element size specifiers should match.
uzp1 z15.h, z29.h, z1.b
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: invalid operand
// CHECK-NEXT: uzp1 z15.h, z29.h, z1.b
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:

